--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,20 +1,69 @@
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+  line-height: 1.3;
+}
+
 body {
-    background-color: $dark;
-    color: $white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+  background-color: $dark;
+  color: $dark_gray;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 
 a {
-    color: $primary;
+  color: $primary;
+  text-decoration: none;
+}
 
-    &:hover,
-    &:focus {
-        text-decoration: none;
-    }
+ul {
+  list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0px 0px 10px;
+  font-weight: 600;
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: clamp(40px, 8vw, 80px);
+}
+
+h2 {
+  font-size: clamp(28px, 8vw, 40px);
+}
+
+h3 {
+  font-size: clamp(18px, 8vw, 30px);
 }
 
 .container {
-    width: 80%;
-    margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1440px;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: $primary;
+}
+
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: $primary;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
